Fixed global variables and text alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,10 @@
 
 :root {
   --decor-color: teal;
-  --background-color: #blue;
+  --background-color: rgb(42, 49, 66);
+  --text-color: white;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 h1 {
@@ -15,7 +18,6 @@ h1 {
 }
 
 h2 {
-  color: white;
   font-size: 55px;
   font-family: gravesend-sans, sans-serif;
   font-style: normal;
@@ -27,26 +29,12 @@ h2 {
 /* Light Theme */
 .light-theme {
   background-size: 100%;
-  color: black;
 }
 
 .light-theme h1{
-  color: rgb(22, 22, 22);
   text-align: center;
 }
 
-.light-theme #anchor-title{
-  color:rgb(36, 36, 36);
-}
-
-.light-theme #scroll{
-  color:rgb(36, 36, 36);
-  border: 1px solid rgb(36, 36, 36);
-}
-
-.light-theme #trending{
-  background-color: transparent;
-}
 
 .light-theme nav {
   background-color: rgb(58, 95, 143);
@@ -71,7 +59,6 @@ h2 {
 
 /* Dark Theme */
 .dark-theme {
-  background:#111111;
   background-position: 50% 50%;
   background-size:100%;
   color: white;
@@ -119,7 +106,6 @@ h2 {
 }
 
 .blue-theme h1{
-  color: rgb(255, 255, 255);
   text-align: center;
 }
 
