--- a/client/src/stylesheets/about.css
+++ b/client/src/stylesheets/about.css
@@ -4,6 +4,7 @@
   background-color: black;
   margin: 0;
   color: #fff;
+  text-align: center;
 }
 .intro-banner {
   background: #111111;
