--- a/client/src/stylesheets/articleview.css
+++ b/client/src/stylesheets/articleview.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 .article {
-    color: rgba(255, 255, 255, 0.904);
+    color: var(--text-color);
     margin: auto;
     max-width: 700px;
 }
